--- a/index.html
+++ b/index.html
@@ -1,5 +1,20 @@
-{% extend 'base.html'}
+<!DOCTYPE html>
+<html lang="en">
 
-{%block content%}
-<c><h1>Hello World</h1></c>
-{%endblock%}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Vaibhav Pathak</title>
+</head>
+
+<body bgcolor=#d400ff>
+
+    {% block content %}
+    <c><h1>Hello World</h1></c>
+    {% endblock %}
+
+
+</body>
+
+</html>
