--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Vaibhav Pathak</title>
+    <title>Daddy</title>
 </head>
 
 <body bgcolor=#d400ff>
 
     {% block content %}
-    <c><h1>Hello World</h1></c>
+    <c><h1>Gaand Maarao</h1></c>
     {% endblock %}
 
 
