--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body bgcolor=#d400ff>
 
     {% block content %}
-    <c><h1>Gaand Maarao</h1></c>
+    <c><h1>Hello<br>How do you do?</h1></c>
     {% endblock %}
 
 
