--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Daddy</title>
-    <link rel='icon' type='image/x-icon' href="buriburizaemon.png">
+    <link rel='icon' type='image/x-icon' href="https://github.com/VaibhavPathak98915/VaibhavPathak98915.github.io/blob/0ee6355396d00226ef29efa8d49c7f2c63deced7/buriburizaemon.png">
 </head>
 
 <body bgcolor=#d400ff>
