--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <meta name="google-signin-client_id" content="gapi.auth2.GoogleAuth.then()">
     <title>GoDaddy</title>
-    <link rel='icon' type='image/x-icon' href="https://github.com/VaibhavPathak98915/VaibhavPathak98915.github.io/blob/0ee6355396d00226ef29efa8d49c7f2c63deced7/buriburizaemon.png">
+    <link rel='icon' type='image/x-icon' href="/buriburizaemon.png">
 </head>
 
 <body bgcolor=#d400ff>
