--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <meta name="google-signin-client_id" content="gapi.auth2.GoogleAuth.then()">
     <title>GoDaddy</title>
-    <link rel='icon' type='image/x-icon' href="/buriburizaemon.png">
+    <link rel='icon' type='image/x-icon' href="buriburizaemon.png">
 </head>
 
 <body bgcolor=#d400ff>
